fix: fix checkstyleg task